<resources>

    <string name="digiveilig_game_name">Digiveilig Spel</string>

    <!--Home string values-->
    <string name="home_highscore_button">Highscores</string>
    <string name="home_help_button">Help</string>
    <string name="home_digiveilig_toets_button">Digiveilig toets</string>
    <string name="home_digiveilig_spel_button">Digiveilig spel</string>
    <string name="home_slogan_text">Gebruik internet op een veilige manier</string>
    <string name="home_logo">Digiveilig logo</string>
    <string name="home_toets_resultaat">Cijfer: 7,8</string>
    <string name="home_sterren">0 Sterren</string>
    <string name="home_cijfer">Toetscijfer</string>

    <!--digiveilig spel string values-->
    <string name="digiveilig_spel_text">Digiveilig spel</string>
    <string name="digiveilig_spel_star">Ster</string>
    <string name="Digiveilig_spel_level_number">1</string>

    <!--Quiz spel string values-->
    <string name="quiz_spel_question">Hier komt een vraag</string>
    <string name="quiz_spel_question_number">Vraag 1</string>
    <string name="quiz_spel_text_description">Quiz spel</string>
    <string name="quiz_spel_block_description">quiz spel block</string>
    <string name="quiz_spel_timer">0</string>
    <string name="quiz_spel_timer_text">Tijd over:</string>
    <string name="quiz_spel_stop_button">Stop</string>

    <!--Quiz spel announcement string values-->
    <string name="quiz_spel_announcement_text">Je hebt gekozen voor de digiveilig toets. Zodra je op start drukt, begint de toets! Je hebt 180 seconden, dus let op je tijd!</string>
    <string name="quiz_spel_announcement_start_button">START!</string>

    <!--Quiz spel result string values-->
    <string name="quiz_spel_result_gameover">Toets afgerond!</string>
    <string name="quiz_spel_result_highscores">Bekijk je resultaten</string>
    <string name="quiz_spel_result_button">Ga terug</string>

    <!--Highscores string values-->
    <string name="highscores_text">Toetsresultaten</string>
    <string name="highscores_block">Toetsresultaten</string>
    <string name="highscores_score">Cijfer: 7,8</string>
    <string name="highscores_information">Hieronder staan jouw 5 hoogst behaalde toetsresultaten.</string>

    <!--Help string values-->
    <string name="help_text">Help</string>
    <string name="help_block">Help block</string>

    <!--Score result string values-->
    <string name="score_result_value">Behaalde score:</string>
    <string name="score_result_value_example">10.0</string>
    <string name="highscores_number_1">1</string>
    <string name="highscores_number_2">2</string>
    <string name="highscores_number_3">3</string>
    <string name="highscores_number_4">4</string>
    <string name="highscores_number_5">5</string>

    <string name="timer">180</string>
    <string name="timer_description">Timer</string>

    <!--Memory game-->
    <string name="memory_stop_button">STOP</string>
    <string name="memory_text">Memory</string>
    <string name="memory_level_text">Level ?</string>
    <string name="digiveilig_spel_result_level">Level 3</string>
    <string name="digiveilig_spel_result_seconds">30 seconden</string>
    <string name="digiveilig_spel_hint">....</string>
    <string name="digiveilig_spel_spel_afgerond_in">Spel afgerond in</string>


    <!--Scenario game-->
    <string name="scenario_question">Je krijgt bovenstaande mail van de ING Bank, wat doe je?</string>
    <string name="scenario_button_one">Op de link in de mail klikken</string>
    <string name="scenario_button_two">Mail verwijderen</string>
    <string name="scenario_button_three">Mail verwijderen en de afzender blokkeren</string>
    <string name="scenario_image">scenario image</string>
    <string name="scenario_gametimer">100</string>
    <string name="scenario_gametimer_image">timer</string>
    <string name="scenario_stop_button">Stop</string>
    <string name="scenario_text">Scenario spel</string>
    <string name="memory_card">memory card</string>
</resources>
