<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:background="@drawable/quiz_spel_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="dehaagsehogeschool.cyberdemo.QuizSpelResultActivity">

    <TextView
        android:id="@+id/quiz_spel_result_gameover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/bree_serif"
        android:layout_marginVertical="10dp"
        android:text="@string/quiz_spel_result_gameover"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/score_result_current_score"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/bree_serif"
        android:layout_marginVertical="10dp"
        android:text="@string/score_result_value"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/score_result_higscore"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/bree_serif"
        android:layout_marginVertical="10dp"
        android:text="@string/score_result_value"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="371dp" />

    <Button
        android:id="@+id/button"
        android:onClick="backToMainScreen"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/quiz_spel_button_shape_grey"
        android:paddingBottom="10dp"
        android:layout_marginVertical="10dp"
        android:text="@string/quiz_spel_result_button"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="25dp" />

</LinearLayout>
