<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_spel_background">

    <ImageView
        android:id="@+id/quiz_spel_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/quiz_spel_text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quiz_spel_text" />

    <TextView
        android:id="@+id/quiz_spel_timer"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:text="@string/quiz_spel_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/quiz_spel_block"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/quiz_spel_block_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_spel_text"
        app:srcCompat="@drawable/quiz_spel_block" />

    <TextView
        android:id="@+id/quiz_spel_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/quiz_spel_question_number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/quiz_spel_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quiz_spel_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/quiz_spel_question"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_spel_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_spel_block">

        <Button
            android:id="@+id/quiz_spel_choice1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/quiz_choice_button"
            android:fontFamily="@font/bree_serif"
            android:onClick="choice1Click"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/quiz_spel_choice2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/quiz_choice_button"
            android:fontFamily="@font/bree_serif"
            android:onClick="choice2Click"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/quiz_spel_choice3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/quiz_choice_button"
            android:fontFamily="@font/bree_serif"
            android:onClick="choice3Click"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/quiz_spel_choice4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/quiz_choice_button"
            android:onClick="choice4Click"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>